fixed spacing in mobile view

--- a/src/styles/Exercises.css
+++ b/src/styles/Exercises.css
@@ -70,9 +70,8 @@ header {
 
 @media screen and (max-width: 675px) {
     .search-bar {
-        margin: 2rem;
+        margin: 0rem 2rem 0rem 2rem;
     }
-
 
     .filter {
         margin: 2rem;
